--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,15 @@
 name: 'Trello integration'
 description: 'Bridge the divide between Trello and Github'
 author: 'Julian Hackenberg'
+
+inputs:
+  GITHUB_TOKEN:
+    description: 'Ghithub token'
+    required: true
+  TRELLO_TOKEN:
+    description: 'Trello API token'
+    required: true
+
+runs:
+  using: 'node16'
+  main: 'dist/index.js'
